<resources>
    <string name="app_name">ClubApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="announcements">Announcements</string>
    <string name="hint_club_name">Club Name</string>
    <string name="hint_club_desc">Short Description of Club</string>
    <string name="hint_club_channels">Comma separated channel names</string>
    <string name="cancel_create_club">Cancel</string>
    <string name="create_club">Create Club!</string>
    <string name="club_id">clubId</string>
    <string name="announcement_title_hint">Title</string>
    <string name="announcement_body_hint">Announcement</string>
    <string name="btn_make_announcement">Make Announcement</string>

    <!-- Club Settings -->
    <string name="invite_user">Invite User</string>
    <string name="hint_invite_user">Email</string>
    <string name="btn_invite">Invite</string>
    <string name="leave_club">Leave Club</string>
    <string name="delete_club">Delete Club</string>

    <string-array name="navigation_options">
        <item>Information</item>
        <item>Announcements</item>
        <item>Calendar</item>
        <item>Directory</item>
        <item>Club Settings</item>
    </string-array>
    <string name="title_activity_announcements">Announcements</string>
    <string name="title_activity_add_announcement">Add Announcement</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar_event">CalendarEventActivity</string>

    <string name="choose_announcement_channel_prompt">Choose a channel</string>


</resources>
